--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "lodash": "^4.13.1",
+    "socket.io": "^1.4.6",
     "swig": "^1.4.2"
   }
 }
